// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders horizontal above breakpoint 1`] = `
<View
  onLayout={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "flexBasis": 0,
            "flexGrow": 2,
            "marginBottom": 0,
            "marginRight": 10,
          },
        ]
      }
    >
      <TimesImage
        aspectRatio={1.5}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=320"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "flexBasis": 0,
            "flexGrow": 3,
          },
        ]
      }
    >
      <ArticleSummary
        date={2017-07-01T14:32:00.000Z}
        headline="OK, so Putin’s not a lady, but he does have the wildest man‑PMT"
        label="Camilla Long"
        publication="SUNDAYTIMES"
        text={
          Array [
            Object {
              "attributes": Object {},
              "children": Array [
                Object {
                  "attributes": Object {
                    "value": "Sally Jones, one of the world’s most wanted terrorists, has been killed in a US drone strike in Syria, it was revealed last night.",
                  },
                  "children": Array [],
                  "name": "text",
                },
              ],
              "name": "paragraph",
            },
            Object {
              "attributes": Object {},
              "children": Array [
                Object {
                  "attributes": Object {
                    "value": "The former punk",
                  },
                  "children": Array [],
                  "name": "text",
                },
              ],
              "name": "paragraph",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders loading horizontal above breakpoint 1`] = `
<View
  onLayout={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "flexBasis": 0,
            "flexGrow": 3,
          },
        ]
      }
    >
      <ArticleSummary
        date={null}
        headline=""
        label=""
        publication=""
        text={Array []}
      />
    </View>
  </View>
</View>
`;

exports[`renders loading vertical by default 1`] = `
<View
  onLayout={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={Object {}}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 2,
            }
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "400",
              "lineHeight": 22,
              "marginBottom": 8,
            }
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        />
        <Text
          accessibilityLabel="datePublication"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              },
              Object {},
            ]
          }
          testID="datePublication"
        >
          Thursday January 01 1970
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders vertical by default 1`] = `
<View
  onLayout={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Object {
            "marginBottom": 10,
          },
        ]
      }
    >
      <View>
        <Image
          aspectRatio={1.5}
          onLoad={[Function]}
          source={
            Object {
              "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=320",
            }
          }
          style={undefined}
        />
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <BVLinearGradient
              colors={
                Array [
                  "#f9f9f9",
                  "#ededed",
                ]
              }
              end={
                Object {
                  "x": -0.09302964577578221,
                  "y": 0.11488204504197774,
                }
              }
              locations={
                Array [
                  0,
                  1,
                ]
              }
              start={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              style={
                Array [
                  Object {
                    "flex": 1,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={Object {}}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 2,
            }
          }
        >
          CAMILLA LONG
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "400",
              "lineHeight": 22,
              "marginBottom": 8,
            }
          }
        >
          OK, so Putin’s not a lady, but he does have the wildest man‑PMT
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            
            Sally Jones, one of the world’s most wanted terrorists, has been killed in a US drone strike in Syria, it was revealed last night.
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            The former punk
            ...
          </Text>
        </Text>
        <Text
          accessibilityLabel="datePublication"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              },
              Object {},
            ]
          }
          testID="datePublication"
        >
          Saturday July 01 2017
          , The Sunday Times
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders without image 1`] = `
<View
  onLayout={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={Object {}}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 2,
            }
          }
        >
          CAMILLA LONG
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "400",
              "lineHeight": 22,
              "marginBottom": 8,
            }
          }
        >
          OK, so Putin’s not a lady, but he does have the wildest man‑PMT
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            
            Sally Jones, one of the world’s most wanted terrorists, has been killed in a US drone strike in Syria, it was revealed last night.
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            The former punk
            ...
          </Text>
        </Text>
        <Text
          accessibilityLabel="datePublication"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              },
              Object {},
            ]
          }
          testID="datePublication"
        >
          Saturday July 01 2017
          , The Sunday Times
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders without image url 1`] = `
<View
  onLayout={[Function]}
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={Object {}}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 2,
            }
          }
        >
          CAMILLA LONG
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "400",
              "lineHeight": 22,
              "marginBottom": 8,
            }
          }
        >
          OK, so Putin’s not a lady, but he does have the wildest man‑PMT
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            
            Sally Jones, one of the world’s most wanted terrorists, has been killed in a US drone strike in Syria, it was revealed last night.
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            The former punk
            ...
          </Text>
        </Text>
        <Text
          accessibilityLabel="datePublication"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              },
              Object {},
            ]
          }
          testID="datePublication"
        >
          Saturday July 01 2017
          , The Sunday Times
        </Text>
      </View>
    </View>
  </View>
</View>
`;
